<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">fbSpieleApp</string>


    <string name="title_activity_settings">settings</string>


    <string name="settings_settingsEncryption_password">YW9UfrHFT5TkJY4uo4cuwdKcZ4NCJ29nCcrWqqjf73QPFamgccJcyJNs5SzSDcmSwvwheN4rjZEFQkP3xWMc925hd22j4YiS9mMJ</string>
    <string name="settings_settingsEncryption_salt">oKRWEEXqTJJYwE5whnjXHzZShaUZbtbMUCtrZSHqZZ3YbDKtLDbHNfVxaJwnpYqwaeKMFtxg7NLetKqEZtVSox4uqoSxhSoVWJSt</string>
    <string name="settings_encryption_salt">oKRWEEXqTJJYwE5whnjXHzZShaUZbtbMUCtrZSHqZZ3YbDKtLDbHNfVxaJwnpYqwaeKMFtxg7NLetKqEZtVSox4uqoSxhSoVWJSt</string>


    <string name="settings_headers_user">user settings</string>
    <string name="settings_headers_technical">technical settings</string>
    <string name="settings_headersKey_user">settings_headersKey_user</string>
    <string name="settings_headersKey_technical">settings_headersKey_technical</string>

    <string name="settings_key_ipAddress">settings_key_ipAddress</string>
    <string name="settings_title_ipAddress">server ip address</string>
    <string name="settings_default_ipAddress">192.168.0.7</string>

    <string name="settings_key_port">settings_key_port</string>
    <string name="settings_title_port">port</string>
    <string name="settings_default_port">2079</string>

    <string name="settings_key_useEncryption">settings_key_useEncryption</string>
    <string name="settings_title_useEncryption">encryption?</string>
    <string name="settings_useEncryption_pref_key">settings_useEncryption_pref_key</string>

    <string name="settings_key_password">settings_key_password</string>
    <string name="settings_title_password">password</string>
    <string name="settings_encryptedPassword_pref_key">settings_encryptedPassword_pref_key</string>

    <string name="settings_key_salt">settings_key_salt</string>
    <string name="settings_title_salt">salt</string>
    <string name="settings_encryptedSalt_pref_key">settings_encryptedSalt_pref_key</string>

    <string name="settings_key_name">settings_key_name</string>
    <string name="settings_title_name">name</string>

    <string name="settings_key_color">settings_key_color</string>
    <string name="settings_key_color_hex">settings_key_color_hex</string>
    <string name="settings_title_color">color</string>

    <string name="settings_key_team">settings_key_team</string>
    <string name="settings_key_team_int">settings_key_team_int</string>
    <string name="settings_title_team">team</string>

    <string name="settings_key_role">settings_key_role</string>
    <string name="settings_title_role">role</string>

    <string name="settings_key_autoReconnect">settings_key_autoReconnect</string>
    <string name="settings_title_autoReconnect">automatically try to reconnect to server</string>







    <string name="maincards_connection_title_text">connection</string>
    <string name="maincards_connection_connected_text">connected</string>
    <string name="maincards_connection_disconnected_text">disconnected</string>
    <string name="maincards_connection_pinging_text">pinging …</string>
    <string name="maincards_connection_tryingToReconnect_text">trying to reconnect</string>

    <string name="maincards_settings_title_text">settings</string>
    <string name="maincards_buzzer_title_text">buzzer</string>
    <string name="maincards_woLiegtWas_title_text">wo liegt was</string>
    <string name="maincards_bierathlon_title_text">bierathlon</string>
    <string name="maincards_schaetztn_title_text">schätztn</string>





    <string name="connected_message">connected</string>
    <string name="ping_message">pingRequest</string>
    <string name="ping_response">pingResponse</string>
    <string name="buzzer_message">buzzer</string>
    <string name="buzzer_firstBuzzer_message">firstBuzzered</string>
    <string name="buzzer_toSlow_message">toSlowBuzzered</string>
    <string name="buzzer_toSlow_Toastmessage">to slow :(</string>

    <string name="buzzerFragmentTag">buzzerFragmentTag</string>

    <string name="mapcards_mapWorld_titleText">world</string>
    <string name="mapcards_mapDeutschland_titleText">germany</string>
    <string name="mapcards_mapHamburg_titleText">hamburg</string>

    <string name="mapbutton_title_resetView">reset view</string>
    <string name="mapbutton_title_confirm">confirm</string>
    <string name="mapbutton_title_cancel" tools:ignore="ButtonCase">cancel</string>



    <string name="sendText_newNameAnfangString">myNewName</string>
    <string name="sendText_newNameEndString">endMyNewName</string>

    <string name="sendText_newColorAnfangString">myNewColor</string>
    <string name="sendText_newColorEndString">endMyNewColor</string>

    <string name="sendText_newTeamAnfangString">myNewTeam</string>
    <string name="sendText_newTeamEndString">endMyNewTeam</string>

    <string name="sendText_newRoleAnfangString">myNewRole</string>
    <string name="sendText_newRoleEndString">endMyNewRole</string>








    <string name="woliegtwas_woLiegtWasAuflosungStart">woLiegtWasAuflosungStart</string>
    <string name="woliegtwas_woLiegtWasAuflosungEnd">woLiegtWasAuflosungEnd</string>

    <string name="woliegtwas_woLiegtWasResetMaps">woLiegtWasReset</string>



    <string name="entrySendTextGenerelStart">entryStart</string>
    <string name="entrySendTextGenerelEnd">entryEnd</string>


    <!--- only used in this app (not send or received) -->
    <string name="woliegtwas_entrySplitter">entrySplitter</string>


    <string name="woliegtwas_entrySendTextPhiStart">phiStart</string>
    <string name="woliegtwas_entrySendTextPhiEnd">phiEnd</string>
    <string name="woliegtwas_entrySendTextThetaStart">thetaStart</string>
    <string name="woliegtwas_entrySendTextThetaEnd">thetaEnd</string>
    <string name="woliegtwas_entrySendTextColorStart">colorStart</string>
    <string name="woliegtwas_entrySendTextColorEnd">colorEnd</string>
    <string name="woliegtwas_entrySendTextExtraStart">extraStart</string>
    <string name="woliegtwas_entrySendTextExtraEnd">extraEnd</string>

    <string name="woliegtwas_entrySendTextExtraRightAnswer">rightAnswer</string>
    <string name="woliegtwas_entrySendTextExtraClosest">closest</string>

    <string name="woliegtwas_closestGuessSendText">closestSendText</string>


    <string name="schatztn_editTextDefaultHint">schätztn?</string>
    <string name="schatztn_sendTextStart">schatztn_sendTextStart</string>
    <string name="schatztn_sendTextEnd">schatztn_sendTextEnd</string>

    <string name="schatztn_sendReset">schatztn_sendReset</string>





</resources>