<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="connection">

        <EditTextPreference
            app:key="@string/settings_key_ipAddress"
            app:title="@string/settings_title_ipAddress"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            android:digits="0123456789." />


        <EditTextPreference
            app:key="@string/settings_key_password"
            app:title="@string/settings_title_password"
            app:useSimpleSummaryProvider="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="textPassword" />

        <EditTextPreference
            app:key="@string/settings_key_salt"
            app:title="@string/settings_title_salt"
            app:useSimpleSummaryProvider="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="textPassword" />

    </PreferenceCategory>

    <PreferenceCategory app:title="game">

        <EditTextPreference
            app:key="@string/settings_key_name"
            app:title="@string/settings_title_name"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="@string/settings_key_color"
            app:title="@string/settings_title_color" />

    </PreferenceCategory>

</PreferenceScreen>